[feature] adding controls to resize header

--- a/css/base.css
+++ b/css/base.css
@@ -45,6 +45,7 @@
   --header-shade-opacity: none;
   --header-height: 0;
   --header-shade-padding: 4;
+  --header-size: 1em;
   --background-image: none;
   --background-opacity: 1;
   --background-accent-opacity: 0;
